[tool.poetry]
name = "mockserver"
version = "0.1.0"
description = ""
authors = ["Nikita Pivkin <nikita.pivkin@smartforce.io>"]

[tool.poetry.dependencies]
python = "^3.10"
simple_http_server = "^0.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
